[gd_scene load_steps=2 format=3 uid="uid://c8dpqx7wgk2dx"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_qxn4y"]

[node name="UI" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_qxn4y")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 50.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Vidas: 3"
horizontal_alignment = 2

[node name="GameOverPanel" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverBG" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="GameOverBox" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="GameOverLabel" type="Label" parent="GameOverPanel/GameOverBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/GameOverBox"]
layout_mode = 2
text = "PONTUAÇÃO FINAL: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/GameOverBox"]
layout_mode = 2
text = "JOGAR NOVAMENTE"

[node name="MenuButton" type="Button" parent="GameOverPanel/GameOverBox"]
layout_mode = 2
text = "MENU PRINCIPAL"

[node name="PausePanel" type="Control" parent="."]
process_mode = 2
mouse_filter = 0
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0

[node name="PauseBG" type="ColorRect" parent="PausePanel"]
mouse_filter = 2
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.8)

[node name="PauseBox" type="VBoxContainer" parent="PausePanel"]
mouse_filter = 0
layout_mode = 0
offset_left = 300.0
offset_top = 220.0
offset_right = 500.0
offset_bottom = 380.0

[node name="PauseLabel" type="Label" parent="PausePanel/PauseBox"]
layout_mode = 2
text = "PAUSADO"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/PauseBox"]
process_mode = 2
layout_mode = 2
text = "CONTINUAR"

[node name="QuitButton" type="Button" parent="PausePanel/PauseBox"]
process_mode = 2
layout_mode = 2
text = "MENU PRINCIPAL"

[connection signal="pressed" from="GameOverPanel/GameOverBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/GameOverBox/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PausePanel/PauseBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/PauseBox/QuitButton" to="." method="_on_quit_button_pressed"]